# charlie

./: .gitignore  77a3460e-aa0a-4856-9c81-18bf434d5cda.pptx  README.md  pyproject.toml
src/: pseudo_code.md  service.py
src/api_models/: __init__.py  article_request.py  article_response.py  context_response.py  llm_improve_context_request.py  manual_improve_context_request.py  summarize_request.py  summarize_response.py
src/consts/: __init__.py  defaults.py  mongo_info.py
src/db_handler/: __init__.py  db_handler.py  mongo_handler.py
src/llm/: __init__.py  article_creator.py  context_improver.py  llm_context_improver.py  llm_summarize_creator.py  prompts.py
src/llm/clients/: __init__.py  base_llm_client.py  glm5_self_hosted_client.py  qwen_local_cpu_client.py
ui/: package-lock.json  package.json
ui/src/: App.jsx  styles.css
ui/src/api/: charlie.js  context.js  manzouri.js
ui/src/components/: ChatHeader.jsx  ContextPanel.jsx  MessageBubble.jsx  MessageComposer.jsx  MessageList.jsx
ui/src/constants/: chat.js
ui/src/hooks/: useChat.js  useContextManager.js  useSummaryGenerator.js
ui/src/utils/: chat.js  time.js
